# rust-api

./: Cargo.toml  docker-compose.yaml
migrations/2020-08-07-095830_create_chapters/: down.sql  up.sql
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  schema.rs  static_files.rs
