[package]
name = "rust-api"
version = "0.1.0"
authors = ["Swann <swann@devloup.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"

rocket = "0.4.5"
